--- a/WinForms/WinFormsHelloWorld/Properties/Resources.resx
+++ b/WinForms/WinFormsHelloWorld/Properties/Resources.resx
@@ -112,9 +112,46 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="BishopBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ChessFigures\BishopBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BishopWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ChessFigures\BishopWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HourseBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ChessFigures\HourseBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HourseWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ChessFigures\HourseWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="KingBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ChessFigures\KingBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="KingWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ChessFigures\KingWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PawnBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ChessFigures\PawnBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PawnWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ChessFigures\PawnWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="QueenBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ChessFigures\QueenBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="QueenWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ChessFigures\QueenWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="RockBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ChessFigures\RockBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="RockWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ChessFigures\RockWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
